@@ -39,7 +39,7 @@ import org.opennms.horizon.minion.flows.listeners.TcpParser;
 
 import com.codahale.metrics.MetricRegistry;
 
-import org.opennms.horizon.minion.flows.listeners.FlowsListener;
+import org.opennms.horizon.minion.flows.listeners.Listener;
 import org.opennms.horizon.minion.flows.listeners.TcpListener;
 import org.opennms.horizon.minion.flows.parser.TelemetryRegistry;
 import org.opennms.sink.flows.contract.ListenerConfig;
@@ -51,28 +51,29 @@ public class TcpListenerFactory implements ListenerFactory {
 
     public TcpListenerFactory(TelemetryRegistry telemetryRegistry) {
         this.telemetryRegistry = Objects.requireNonNull(telemetryRegistry);
-        telemetryRegistry.addListenerFactory(this);
     }
 
     @Override
-    public Class<? extends FlowsListener> getBeanClass() {
+    public Class<? extends Listener> getListenerClass() {
         return TcpListener.class;
     }
 
     @Override
-    public FlowsListener createBean(ListenerConfig listenerConfig) {
+    public Listener create(ListenerConfig listenerConfig) {
         // TcpListener only supports one parser at a time
         if (listenerConfig.getParsersCount() != 1) {
             throw new IllegalArgumentException("The simple TCP listener supports exactly one parser");
         }
+
         // Ensure each defined parser is of type TcpParser
         final List<TcpParser> parser = listenerConfig.getParsersList().stream()
-                .map(telemetryRegistry::getParser)
+                .map(telemetryRegistry::createParser)
                 .filter(p -> nonNull(p) && p instanceof TcpParser)
-                .map(p -> (TcpParser) p).collect(Collectors.toList());
+                .map(p -> (TcpParser) p).toList();
         if (parser.size() != listenerConfig.getParsersCount()) {
             throw new IllegalArgumentException("Each parser must be of type TcpParser but was not.");
         }
+
         int port = 0;
         try {
             Optional<Parameter> parameter = listenerConfig.getParametersList().stream().filter(p -> "port".equals(p.getKey())).findFirst();
@@ -82,6 +83,7 @@ public class TcpListenerFactory implements ListenerFactory {
         } catch (NumberFormatException e) {
             throw new IllegalArgumentException(String.format("Invalid port for listener: %s, error: %s", listenerConfig.getName(), e.getMessage()));
         }
+
         return new TcpListener(listenerConfig.getName(), port, parser.iterator().next(), new MetricRegistry());
     }
 }
